Bug fix content fit on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 * {
-  overflow-x: hidden;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: aqua;
